# docs/openapi.yaml
@@ -314,6 +314,38 @@ paths:
                   propertyNames:
                     type: string
                   additionalProperties: {}
+                outcomes:
+                  anyOf:
+                    - type: array
+                      items:
+                        type: object
+                        properties:
+                          value:
+                            type: string
+                            minLength: 1
+                          label:
+                            type: string
+                            minLength: 1
+                          style:
+                            type: string
+                            enum:
+                              - primary
+                              - secondary
+                              - danger
+                          requireFields:
+                            type: array
+                            items:
+                              type: string
+                              minLength: 1
+                        required:
+                          - value
+                          - label
+                    - type: "null"
+                outcomeKey:
+                  anyOf:
+                    - type: string
+                      minLength: 1
+                    - type: "null"
               required:
                 - code
                 - jsonSchema
@@ -379,6 +411,38 @@ paths:
                   propertyNames:
                     type: string
                   additionalProperties: {}
+                outcomes:
+                  anyOf:
+                    - type: array
+                      items:
+                        type: object
+                        properties:
+                          value:
+                            type: string
+                            minLength: 1
+                          label:
+                            type: string
+                            minLength: 1
+                          style:
+                            type: string
+                            enum:
+                              - primary
+                              - secondary
+                              - danger
+                          requireFields:
+                            type: array
+                            items:
+                              type: string
+                              minLength: 1
+                        required:
+                          - value
+                          - label
+                    - type: "null"
+                outcomeKey:
+                  anyOf:
+                    - type: string
+                      minLength: 1
+                    - type: "null"
       parameters:
         - schema:
             type: string
